--- a/WebContent/static/html_UI/html/form-elements.html
+++ b/WebContent/static/html_UI/html/form-elements.html
@@ -1745,7 +1745,7 @@
 
 												<div class="col-xs-3">
 													<label>
-														<input name="switch-field-1" class="ace ace-switch ace-switch-2" type="checkbox" />
+														<input name="switch-field-1" class="ace ace-switch ace-switch-2" type='checkbox' />
 														<span class="lbl"></span>
 													</label>
 												</div>
@@ -1760,7 +1760,7 @@
 												<div class="col-xs-3">
 													<label>
 														<input name="switch-field-1" class="ace ace-switch" type="checkbox" />
-														<span class="lbl" data-lbl="CUS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TOM"></span>
+														<span class="lbl" data-lbl="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"></span>
 													</label>
 												</div>
 											</div>
@@ -1798,8 +1798,9 @@
 											<div class="row">
 												<div class="col-xs-3">
 													<label>
+														<span class="lbl">a</span>
 														<input name="switch-field-1" class="ace ace-switch btn-rotate" type="checkbox" />
-														<span class="lbl"></span>
+														<span class="lbl">bbbb</span>
 													</label>
 												</div>
 
